[package]
name = "dsfs"
version = "0.0.1"
authors = ["Mike Burr <mb@unintuitive.org>"]
description = "Dead Simple File Server -- The missing Rust development web server."
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/stnbu/dsfs"
homepage = "https://unintuitive.org/"
documentation = "https://github.com/stnbu/dsfs"
edition = "2018"

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"


